# investment-portfolio-api

./: Cargo.toml  README.md
src/: handlers.rs  lib.rs  main.rs  models.rs  response.rs
src/handlers/: reports.rs  transactions.rs
src/models/: asset.rs  report.rs  transaction.rs
tests/: route_generate_report.rs  route_index.rs
tests/common/: mod.rs
