[package]
name = "investment-portfolio-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "std",
    "serde",
    # Exclude "oldtime" feature
] }
